[package]
name = "dot-matrix"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
cpal = "0.18.1"
eframe = "0.34.3"
egui = "0.34.3"
rand = "0.9.0"
ringbuf = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5"
